--- a/力扣/学习计划/算法/Day1二分查找/34. 在排序数组中查找元素的第一个和最后一个位置.md
+++ b/力扣/学习计划/算法/Day1二分查找/34. 在排序数组中查找元素的第一个和最后一个位置.md
@@ -1,5 +1,49 @@
-package 力扣.学习计划.算法.Day1二分查找;
+#### [34. 在排序数组中查找元素的第一个和最后一个位置](https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array/)
 
+难度中等1639
+
+给定一个按照升序排列的整数数组 `nums`，和一个目标值 `target`。找出给定目标值在数组中的开始位置和结束位置。
+
+如果数组中不存在目标值 `target`，返回 `[-1, -1]`。
+
+**进阶：**
+
+- 你可以设计并实现时间复杂度为 `O(log n)` 的算法解决此问题吗？
+
+**示例 1：**
+
+```
+输入：nums = [5,7,7,8,8,10], target = 8
+输出：[3,4]
+```
+
+**示例 2：**
+
+```
+输入：nums = [5,7,7,8,8,10], target = 6
+输出：[-1,-1]
+```
+
+**示例 3：**
+
+```
+输入：nums = [], target = 0
+输出：[-1,-1]
+```
+
+**提示：**
+
+- `0 <= nums.length <= 105`
+- `-109 <= nums[i] <= 109`
+- `nums` 是一个非递减数组
+- `-109 <= target <= 109`
+
+**二分法**
+
+* 确定左边界
+* 确定有边界
+
+```java
 public class Solution34 {
     //二分法
     public int[] searchRange(int[] nums, int target) {
@@ -39,3 +83,4 @@ public class Solution34 {
         return right;
     }
 }
+```
