回溯:组合问题--全排列问题--集合问题 1.全排列:       不考虑重复的情况,直接onPath是否含有当前节点即可       考虑重复的情况,需要使用boolean[]数组记录某个位置的元素是否使用 2.集合问题:       不考虑重复的情况:直接层层dfs(循环更新res直到i==start-->length)       考虑重复的情况:先排序,,之后再剪枝(排除num[i-1]==num[i]的情况,这里不能再重复分支) 3.组合问题:       不考虑重复的情况:循环: i==start-->i<n-onPath.size()+1  {dfs(n,k,i+1)}        直到onPath.size==k结束       组合求和: 可重复情况: 循环dfs(n,k,sum+num[i],i)直到sum==target                          或者>直接剪枝(sum>target)               不可重复情况:排序+剪枝(当出现num[i]==num[i-1]就跳过,因为这里会出现重复分支)

--- a/力扣/学习计划/算法/Day10递归回溯/47. 全排列 II.md
+++ b/力扣/学习计划/算法/Day10递归回溯/47. 全排列 II.md
@@ -28,6 +28,8 @@
 
 **排序**+**去重**
 
+> 这里相比于可出现重复元素的子集2相比,,需要增加一个boolean[]数组,来确保全部访问过,,而不是剪去某个分支
+
 ```java
 public class Solution47 {
     List<List<Integer>> res = new LinkedList<>();
