每日一题--5月30日       从根节点到叶子节点的二进制和       使用前序遍历不断叠加每个节点的和,并递归调用左右子树

--- a/LeetCode/每日一题/Five/Day30/1022. 从根到叶的二进制数之和.md
+++ b/LeetCode/每日一题/Five/Day30/1022. 从根到叶的二进制数之和.md
@@ -35,3 +35,38 @@
 
 - 树中的节点数在 `[1, 1000]` 范围内
 - `Node.val` 仅为 `0` 或 `1` 
+
+
+
+##### 先序遍历
+
+
+
+```c++
+class Solution {
+ public:
+  int res = 0;
+
+ public:
+  //计算每个根节点的值
+  void dfs(TreeNode *root, int sum) {
+    if (!root) {
+      return;
+    } else if (!root->left && !root->right) {
+      //如果是叶子节点,那么直接更新res后返回结果
+      sum = sum * 2 + root->val;
+      res += sum;
+      return;
+    }
+    //当前节点不为空,也不是叶子节点时,,先序遍历
+    sum = sum * 2 + root->val;
+    dfs(root->left, sum);
+    dfs(root->right, sum);
+  }
+  int sumRootToLeaf(TreeNode *root) {
+    dfs(root, res);
+    return res;
+  }
+};
+```
+
