DAG:有向无环图的表达式描述

--- a/LeetCode/知识点/图论/图王道/十字链表与邻接多重表.md
+++ b/LeetCode/知识点/图论/图王道/十字链表与邻接多重表.md
@@ -8,7 +8,7 @@
   >
   > 如何找==入边==:顺着**橙色**路径遍历
 
-![image-20220626202902319](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220626202902319.png)
+![image-20220626202902319](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/image-20220626202902319.png)
 
 - 空间复杂度:O(n+|E|)---与邻接链表法相等
 - 类似:树的孩子表示法(顺序+链式存储)
@@ -22,7 +22,7 @@
   1. 邻接矩阵: 空间复杂度为O(n²)太高
   2. 邻接表:每一条边 对应入,出两份==冗余==信息,删除顶点和边等操作时间复杂度较高
 
-  ![image-20220626212409985](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220626212409985.png)
+  ![image-20220626212409985](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/image-20220626212409985.png)
 
 - 优点:
 
