--- a/LeetCode/知识点/查找/查找概念.md
+++ b/LeetCode/知识点/查找/查找概念.md
@@ -4,14 +4,14 @@
 
 ##### 平均查找长度`ASL`:所有查找过程中关键字的比较次数的平均值
 
-![image-20220628205003762](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220628205003762.png)
+![image-20220628205003762](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/image-20220628205003762.png)
 
 
 
 ##### BST的ASL平均查找长度
 
-![image-20220628205102668](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220628205102668.png)
+![image-20220628205102668](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/image-20220628205102668.png)
 
 ##### 分类查找成功以及查找失败
 
-![image-20220628205313503](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220628205313503.png)
+![image-20220628205313503](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/image-20220628205313503.png)
