--- a/LeetCode/知识点/查找/二分查找/二分查找有序顺序表.md
+++ b/LeetCode/知识点/查找/二分查找/二分查找有序顺序表.md
@@ -10,7 +10,9 @@ typedef struct {
 }SSTable;
 ```
 
-#### 效率分析![image-20220629075221274](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220629075221274.png)
+#### 效率分析
+
+![image-20220629075221274](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/image-20220629075221274.png)
 
 #### code
 
@@ -34,17 +36,17 @@ int Binare_Search(SSTable ST, ElemType value) {
 
 #### 查找判定树的构造
 
-![image-20220629080627792](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220629080627792.png)
+![image-20220629080627792](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/image-20220629080627792.png)
 
 - 二分查找的判定树==一定是平衡二叉树==(左子树高度-右子树高度不超过1)
 - 树高h = ⌈log₂(n+1)⌉
 - 也是**BST**
 
-![image-20220629080756937](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220629080756937.png)
+![image-20220629080756937](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/image-20220629080756937.png)
 
 
 
-![image-20220629081022778](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220629081022778.png)
+![image-20220629081022778](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/image-20220629081022778.png)
 
 
 
