--- a/LeetCode/知识点/排序/插入排序/插入排序.md
+++ b/LeetCode/知识点/排序/插入排序/插入排序.md
@@ -54,7 +54,7 @@ void InsertSort_WithSoldier(int A[], int n) {
 ##### 优化
 
 - 由于**插入排序**要求待插入元素插入到前面已排好序的**有序**元素中
-  - 由于之前采用的线性扫描,,,这里可以**二分查找**到该删除的位置,再移动元素![image-20220630111922384](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220630111922384.png)
+  - 由于之前采用的线性扫描,,,这里可以**二分查找**到该删除的位置,再移动元素![image-20220630152314015](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/image-20220630152314015.png)
 
 ##### Code3
 
