--- a/LeetCode/知识点/查找/红黑树/红黑树.md
+++ b/LeetCode/知识点/查找/红黑树/红黑树.md
@@ -36,7 +36,7 @@
 
 #### 例题
 
-1. ![image-20220712212341391](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207122124434.png)
+![image-20220712212341391](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207122124434.png)
 
 
 
