补充B站视频可视化讲解

--- a/LeetCode/知识点/排序/内部排序/快速排序/快速排序.md
+++ b/LeetCode/知识点/排序/内部排序/快速排序/快速排序.md
@@ -1,5 +1,7 @@
 ### 快速排序
 
+- [B站参考视频][https://www.bilibili.com/video/BV1rV411j7f6?spm_id_from=333.337.search-card.all.click&vd_source=5cee6784fff8646433f97f22f9229482]
+
 - 算法思想:保证随机的一个pivot作为基准,,排序使得
   $$
   [1,pivot-1]<[pivot]<[pivot+1,n]
