--- a/LeetCode/知识点/排序/内部排序/堆排序/堆排序.md
+++ b/LeetCode/知识点/排序/内部排序/堆排序/堆排序.md
@@ -68,7 +68,7 @@ void Adjust(int A[], int n, int root) {
     	BuildMaxHeap(A, n);//初始化建堆
     	for (int i = n;i >= 2;--i) {//n-1趟的交换和建立堆的过程
     		swap(A[i], A[1]);//不断让堆顶元素和堆底元素交换
-    		Adjust(A, n - 1, 1);//n-1,把剩余的待排序元素整理成堆
+    		Adjust(A, i - 1, 1);//n-1,把剩余的待排序元素整理成堆
     		/* 依次顺序得到升序序列 */
     	}
     }
