--- a/settings/壁纸.md
+++ b/settings/壁纸.md
@@ -20,3 +20,5 @@
 
 ![img](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207062127747.png)
 
+![VSCode](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208230849078.png)
+
